# django-simple-menu

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README.rst  TODO  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile  conf.py  configuration.rst  example.rst  index.rst  installation.rst  usage.rst
example/: .gitignore  README.rst  example.sqlite3  requirements.txt
example/accounts/: menus.py  urls.py  views.py
example/accounts/templates/: base.html  index.html  menu.html
example/accounts/templates/accounts/: index.html  profile.html  sign_in.html  subpage.html  super_only.html
example/accounts/templates/registration/: login.html  logout.html  profile.html
example/example/: asgi.py  settings.py  urls.py  wsgi.py
example/reports/: menus.py  urls.py  views.py
example/reports/templates/reports/: index.html  staff.html  superuser.html
example/templates/: base.html  menu.html  submenu.html
menu/: __init__.py  menu.py  test_settings.py
menu/templates/: bootstrap-navbar-submenu.html  bootstrap-navbar.html  bootstrap4-navbar.html
menu/templatetags/: menu.py
menu/tests/: test_menu.py
simple_menu/: __init__.py  menu.py  test_settings.py
simple_menu/templates/simple_menu/: bootstrap-navbar-submenu.html  bootstrap-navbar.html
simple_menu/templatetags/: menu.py  simple_menu.py
simple_menu/tests/: test_menu.py
tests/: test_menu.py
