[metadata]
name = django-simple-menu
url = https://github.com/jazzband/django-simple-menu
author = Evan Borgstrom
author_email = evan@borgstrom.ca
description = Simple, yet powerful, code-based menus for Django applications
long_description = file: README.rst
license = BSD 2-Clause "Simplified" License
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    simple_menu
    menu
include_package_data = True
python_requires = >=3.6,<4.0
install_requires =
    Django>=2.2
    importlib_metadata
setup_requires =
    setuptools_scm
