[metadata]
name = django_simple_menu
description = Simple, yet powerful, code-based menus for Django applications
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jazzband/django-simple-menu
author = Evan Borgstrom
author_email = evan@borgstrom.ca
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    simple_menu
    menu
install_requires =
    Django>=2.2
    importlib-metadata;python_version < '3.8'
python_requires = >=3.6,<4.0
include_package_data = True
setup_requires =
    setuptools-scm
